# LitScout

./: .gitignore  README.md  pyproject.toml
docs/: skill.en.md.example  skill.md.example
src/litscout/: classification.py  cli.py  ranking.py
src/litscout.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/litscout/connectors/: ads.py  arxiv.py  inspire.py  semanticscholar.py
src/litscout/core/: cache.py  dedupe.py  models.py  normalize.py  rate_limit.py  render_jsonl.py  render_md.py  storage.py
src/litscout/enrichment/: __init__.py  llm.py  models.py  prompt.py  render_md.py  runner.py  skill.py
tests/: test_ads_connector.py  test_cache.py  test_cli_cache_version.py  test_cli_config.py  test_cli_integration.py  test_cli_resilience.py  test_cli_sources.py  test_cli_validation.py  test_connector_errors.py  test_connectors_success.py  test_dedupe.py  test_enrich_batch.py  test_enrich_batch_errors.py  test_enrich_partial.py  test_enrich_schema.py  test_enrichment_error_handling.py  test_enrichment_json_parsing.py  test_enrichment_render_highlights.py  test_goals.py  test_inspire_connector.py  test_normalize.py  test_ranking.py  test_rate_limit.py  test_renderers.py  test_security_logging.py  test_skill.py  test_storage.py  test_storage_extra.py
tests/fixtures/: ads_sample.json  edge_case_papers.jsonl  inspire_sample.json  malformed_llm_response.json  raw_sample.jsonl  valid_response.json
