[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litscout"
version = "0.1.0"
description = "LitScout (Literature Scout) MVP-1"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "LitScout" }]
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "pydantic>=2.6",
  "pytest>=8.0",
]

[project.optional-dependencies]
 dev = ["ruff>=0.4"]

[project.scripts]
litscout = "litscout.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
